tweaks to format

--- a/python_portfolio_constuction/notebooks/donwside.ipynb
+++ b/python_portfolio_constuction/notebooks/donwside.ipynb
@@ -444,7 +444,7 @@
     "Value at risk\n",
     "\n",
     "- Historical VaR\n",
-    "- Prarmeturc VaR - Gaussiab\n",
+    "- Prarmeturc VaR - Gaussian\n",
     "- Modified Cornish-Fischer VaR"
    ]
   },
@@ -599,8 +599,8 @@
     }
    ],
    "source": [
-    "var_gausiian = -(hfi.mean() + z*hfi.std(ddof=0))\n",
-    "var_gausiian"
+    "var_gaussian = -(hfi.mean() + z*hfi.std(ddof=0))\n",
+    "var_gaussian"
    ]
   },
   {
