--- a/python_portfolio_constuction/notebooks/Returns.ipynb
+++ b/python_portfolio_constuction/notebooks/Returns.ipynb
@@ -1824,20 +1824,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 101,
    "metadata": {},
    "outputs": [
@@ -1999,7 +1985,7 @@
     }
    ],
    "source": [
-    "risk_free_rate = 0.03 # should be time-series of the risk free rate\n",
+    "risk_free_rate = 0.03 # Should be time-series of the risk free rate\n",
     "excess_return = annualized_return - risk_free_rate\n",
     "sharpe_ratio = excess_return/annualized_vol\n",
     "sharpe_ratio\n"
@@ -2036,27 +2022,6 @@
    "source": [
     "sharpe_ratio.plot.bar()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
