--- a/python_portfolio_constuction/notebooks/Limits_of_diversification.ipynb
+++ b/python_portfolio_constuction/notebooks/Limits_of_diversification.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Limits of Diversifcation"
+    "# Limits of Diversification"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(incl the anatomy of a cap-weighted portfolio)"
+    "(Include the anatomy of a cap-weighted portfolio)"
    ]
   },
   {
@@ -788,7 +788,7 @@
    "source": [
     "tmi_tr36rets = total_market_return.rolling(window=36).aggregate(rk.annualize_rets, periods_per_year=12)\n",
     "tmi_tr36rets.plot(figsize=(12,6), label=\"tr36 month\", legend=True)\n",
-    "# total_market_return.plot(label=\"Returns\", legend=True)"
+    "# Total_market_return.plot(label=\"Returns\", legend=True)"
    ]
   },
   {
@@ -1356,16 +1356,9 @@
     }
    ],
    "source": [
-    "## TAKEAWAY: diversification does not help you when markets are crashing (correlations go way up)\n",
+    "# TAKEAWAY: diversification does not help you when markets are crashing (correlations go way up)\n",
     "tmi_tr36rets.corr(ind_tr36corr)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
