--- a/python_portfolio_constuction/notebooks/CIR Model (interest rate, liability hedging).ipynb
+++ b/python_portfolio_constuction/notebooks/CIR Model (interest rate, liability hedging).ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## CIR Model to simulate changes in Interest Rates and Liability Hedging"
+    "# CIR Model to simulate changes in Interest Rates and Liability Hedging"
    ]
   },
   {
@@ -350,7 +350,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# my starting asset value today aka cash in hand\n",
+    "# starting asset value today aka cash in hand\n",
     "a_0 = 0.75\n",
     "# simulate the next 10 years\n",
     "rates, bond_prices = rk.cir(r_0=0.03, b=0.03, n_scenarios=10)\n",
@@ -359,9 +359,9 @@
     "# today's zero coupon bond price is the present value of 1 dollar in 10 years\n",
     "zcbond_10 = pd.Series(data=[1], index=[10])\n",
     "zc_0 = rk.pv(zcbond_10, 0.03)\n",
-    "# I can put my money in a zero coupon bond at today's price\n",
+    "# put money in a zero coupon bond at today's price\n",
     "n_bonds = a_0/zc_0\n",
-    "# and my asset value will grow based on the bond prices\n",
+    "# asset value will grow based on the bond prices\n",
     "av_zc_bonds = n_bonds*bond_prices\n",
     "# how about if I invest in cash? It will grow at some rate of interest\n",
     "av_cash = a_0*(rates/12+1).cumprod()"
@@ -615,27 +615,6 @@
     "ax = tfr_cash.plot.hist(label=\"Cash\", figsize=(12,5), bins=100, legend=True)\n",
     "tfr_zc_bonds.plot.hist(ax=ax,label=\"ZC Bonds\", bins=100, secondary_y=True, legend=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
