--- a/python_portfolio_constuction/notebooks/Compute Drawdowns.ipynb
+++ b/python_portfolio_constuction/notebooks/Compute Drawdowns.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "source": [
+    "# Compute Drawdown"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 134,
    "metadata": {},
@@ -273,8 +280,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#rets.index = rets.index.to_period('M')\n",
-    "#rets.head()"
+    "# rets.index = rets.index.to_period('M')\n",
+    "# rets.head()"
    ]
   },
   {
@@ -894,20 +901,6 @@
    "source": [
     "drawdown(rets[\"LargeCap\"])[\"Drawdown\"].idxmin()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
