--- a/python_portfolio_constuction/notebooks/Coupon-bearing bond MC CIR.ipynb
+++ b/python_portfolio_constuction/notebooks/Coupon-bearing bond MC CIR.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Simulation of Prices of Coupon -Bearing Bonds using CIR"
+    "# Simulation of Prices of Coupon Bearing Bonds using CIR"
    ]
   },
   {
@@ -695,7 +695,7 @@
    "source": [
     "rets_30 = rk.bond_total_return(price_30, 100, .05, 12)\n",
     "rets_10 = rk.bond_total_return(price_10, 100, .05, 12)\n",
-    "# ths assumes a rebalance to 60/40% portfolio weights at the end of each month\n",
+    "# this assumes a rebalance to 60/40% portfolio weights at the end of each month\n",
     "rets_bonds = .6*rets_10 + .4*rets_30"
    ]
   },
@@ -901,27 +901,6 @@
     "rets_mean = rets.mean(axis='columns')\n",
     "rk.summary_stats(pd.DataFrame(rets_mean))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
