--- a/python_portfolio_constuction/notebooks/Dynamic Risk Budgeting.ipynb
+++ b/python_portfolio_constuction/notebooks/Dynamic Risk Budgeting.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Dynamic Risk Budgeting"
+    "# Dynamic Risk Budgeting"
    ]
   },
   {
@@ -165,11 +165,11 @@
     "    for step in range(n_steps):\n",
     "        floor_value = floor*zc_prices.iloc[step] ## PV of Floor assuming today's rates and flat YC\n",
     "        cushion = (account_value - floor_value)/account_value\n",
-    "        psp_w = (m*cushion).clip(0, 1) # same as applying min and max\n",
+    "        psp_w = (m*cushion).clip(0, 1) # Same as applying min and max\n",
     "        ghp_w = 1-psp_w\n",
     "        psp_alloc = account_value*psp_w\n",
     "        ghp_alloc = account_value*ghp_w\n",
-    "        # recompute the new account value at the end of this step\n",
+    "        # Recompute the new account value at the end of this step\n",
     "        account_value = psp_alloc*(1+psp_r.iloc[step]) + ghp_alloc*(1+ghp_r.iloc[step])\n",
     "        w_history.iloc[step] = psp_w\n",
     "    return w_history"
@@ -644,7 +644,7 @@
     }
    ],
    "source": [
-    "# All done with simulated data, use real data (create an ETL function t o pull in historic prices)\n",
+    "# All done with simulated data, use real data (create an ETL function to pull in historic prices)\n",
     "cashrate = 0.02\n",
     "monthly_cashreturn = (1 + cashrate)**(1/12) - 1\n",
     "rets_cash = pd.DataFrame(data=monthly_cashreturn, index=rets_eq.index, columns=rets_eq.columns)\n",
@@ -730,7 +730,7 @@
     "tv_7030b = rk.terminal_values(rets_7030b)\n",
     "tv_floor75 = rk.terminal_values(rets_floor75)\n",
     "tv_maxdd25 = rk.terminal_values(rets_maxdd25)\n",
-    "# plot\n",
+    "# Plot\n",
     "plt.figure(figsize=(12, 6))\n",
     "sns.distplot(tv_eq, color=\"red\", label=\"100% Equities\", bins=100)\n",
     "plt.axvline(tv_eq.mean(), ls=\"--\", color=\"red\")\n",
@@ -814,7 +814,7 @@
     }
    ],
    "source": [
-    "# using historical data (rets_tmi) as opposed to simulated EQ dwith with rets_eq for r1\n",
+    "# Using historical data (rets_tmi) as opposed to simulated EQ dwith with rets_eq for r1\n",
     "cashrate = 0.03\n",
     "monthly_cashreturn = (1 + cashrate)**(1/12) - 1\n",
     "rets_cash = pd.DataFrame(data=monthly_cashreturn, index=rets_tmi.index, columns=[0]) # 1 column dataframe\n",
@@ -912,20 +912,6 @@
    "source": [
     "rk.summary_stats(pd.concat([rets_tmi.rename(\"Market\"), rets_maxdd25[0].rename(\"MaxDD\")], axis=1))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
