--- a/python_portfolio_constuction/notebooks/Efficient Frontier.ipynb
+++ b/python_portfolio_constuction/notebooks/Efficient Frontier.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Efficient Frontier"
+    "# Efficient Frontier"
    ]
   },
   {
@@ -308,7 +308,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#This looks good, so let's add the following code to our module for future use:\n",
+    "# Ind returns\n",
     "\n",
     "def get_ind_returns():\n",
     "    \"\"\"\n",
@@ -319,7 +319,7 @@
     "    ind.columns = ind.columns.str.strip()\n",
     "    return ind\n",
     "\n",
-    "# and then test it by loading the module as usual."
+    "# Test it by loading the module as usual"
    ]
   },
   {
@@ -1481,27 +1481,6 @@
    "source": [
     "cov"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
