--- a/python_portfolio_constuction/notebooks/Implementing_portfolio_insurance_(cppi).ipynb
+++ b/python_portfolio_constuction/notebooks/Implementing_portfolio_insurance_(cppi).ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Implementing Portfilio Insurance (CPPI) and Drawdown Constraints"
+    "# Implementing Portfilio Insurance (CPPI) and Drawdown Constraints"
    ]
   },
   {
@@ -110,8 +110,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "##The 1+r serves as a more efficient for loop (interating through all of the values)\n",
-    "##push the for loop into some part of numpy or rust/C++\n",
+    "# The 1+r serves as a more efficient for loop (interating through all of the values)\n",
+    "# Push the for loop into some part of numpy or rust/C++\n",
     "def compound(r):\n",
     "    return (1+r).prod()-1\n",
     "\n",
@@ -190,7 +190,7 @@
     "if safe_r is None:\n",
     "    safe_r = pd.DataFrame().reindex_like(risky_r)\n",
     "    safe_r.values[:] = riskfree_rate/12 # Setting all the values to a number\n",
-    "#set up DataFrames for saving intermetidate values\n",
+    "# Set up DataFrames for saving intermediate values\n",
     "account_history = pd.DataFrame().reindex_like(risky_r)\n",
     "cushion_history = pd.DataFrame().reindex_like(risky_r)\n",
     "risky_w_history = pd.DataFrame().reindex_like(risky_r)\n",
@@ -203,7 +203,7 @@
     "    safe_w = 1-risky_w\n",
     "    risky_alloc = account_value*risky_w\n",
     "    safe_alloc = account_value*safe_w\n",
-    "    ## update the account value for this time step\n",
+    "    # Update the account value for this time step\n",
     "    account_value = risky_alloc*(1+risky_r.iloc[step]) + safe_alloc*(1+safe_r.iloc[step])\n",
     "    # Save these values into the various data frames\n",
     "    cushion_history.iloc[step] = cushion\n",
@@ -1044,13 +1044,6 @@
    "source": [
     "rk.summary_stats(btr[\"Wealth\"].pct_change().dropna())"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
