--- a/python_portfolio_constuction/notebooks/Interactive monte carlo cppi.ipynb
+++ b/python_portfolio_constuction/notebooks/Interactive monte carlo cppi.ipynb
@@ -78,7 +78,7 @@
     "    ax = prices.plot(legend=False, color='indianred', alpha=0.5, linewidth=2, figsize=(12,5))\n",
     "    ax.axhline(y=s_0, ls=\":\", color=\"black\")\n",
     "    ax.set_ylim(top=400)\n",
-    "    # deaw a dot at the origin\n",
+    "    # Draw a dot at the origin\n",
     "    ax.plot(0, s_0, marker='o', color='darkred', alpha=0.2)"
    ]
   },
@@ -176,7 +176,7 @@
     "    start = 100\n",
     "    sim_rets = rk.gbm(n_scenarios=n_scenarios, mu=mu, sigma=sigma, prices=False, steps_per_year=12)\n",
     "    risky_r = pd.DataFrame(sim_rets)\n",
-    "    # run the \"back\"-test\n",
+    "    # Run the \"back\"-test\n",
     "    btr = rk.run_cppi(risky_r=pd.DataFrame(risky_r),riskfree_rate=riskfree_rate,m=m, start=start, floor=floor)\n",
     "    wealth = btr[\"Wealth\"]\n",
     "    y_max=wealth.values.max()*y_max/100\n",
@@ -226,13 +226,13 @@
     "    start = 100\n",
     "    sim_rets = rk.gbm(n_scenarios=n_scenarios, mu=mu, sigma=sigma, prices=False, steps_per_year=12)\n",
     "    risky_r = pd.DataFrame(sim_rets)\n",
-    "    # run the \"back\"-test\n",
+    "    # Run the \"back\"-test\n",
     "    btr = rk.run_cppi(risky_r=pd.DataFrame(risky_r),riskfree_rate=riskfree_rate,m=m, start=start, floor=floor)\n",
     "    wealth = btr[\"Wealth\"]\n",
-    "    # calculate terminal wealth stats\n",
+    "    # Calculate terminal wealth stats\n",
     "    y_max=wealth.values.max()*y_max/100\n",
     "    terminal_wealth = wealth.iloc[-1]\n",
-    "    # Plot!\n",
+    "    # Plot\n",
     "    fig, (wealth_ax, hist_ax) = plt.subplots(nrows=1, ncols=2, sharey=True, gridspec_kw={'width_ratios':[3,2]}, figsize=(24, 9))\n",
     "    plt.subplots_adjust(wspace=0.0)\n",
     "    \n",
@@ -285,25 +285,25 @@
     "    start = 100\n",
     "    sim_rets = rk.gbm(n_scenarios=n_scenarios, mu=mu, sigma=sigma, prices=False, steps_per_year=steps_per_year)\n",
     "    risky_r = pd.DataFrame(sim_rets)\n",
-    "    # run the \"back\"-test\n",
+    "    # Run the \"back\"-test\n",
     "    btr = rk.run_cppi(risky_r=pd.DataFrame(risky_r),riskfree_rate=riskfree_rate,m=m, start=start, floor=floor)\n",
     "    wealth = btr[\"Wealth\"]\n",
     "\n",
-    "    # calculate terminal wealth stats\n",
+    "    # Calculate terminal wealth stats\n",
     "    y_max=wealth.values.max()*y_max/100\n",
     "    terminal_wealth = wealth.iloc[-1]\n",
     "    \n",
-    "    # used to calculate the number of failures (breaches of the terminal wealth floor) and probability\n",
+    "    # Used to calculate the number of failures (breaches of the terminal wealth floor) and probability\n",
     "    tw_mean = terminal_wealth.mean()\n",
     "    tw_median = terminal_wealth.median()\n",
     "    failure_mask = np.less(terminal_wealth, start*floor)\n",
     "    n_failures = failure_mask.sum()\n",
     "    p_fail = n_failures/n_scenarios\n",
     "    \n",
-    "    # coditional mean loss when the value does drop below the floor\n",
+    "    # Coditional mean loss when the value does drop below the floor\n",
     "    e_shortfall = np.dot(terminal_wealth-start*floor, failure_mask)/n_failures if n_failures > 0 else 0.0\n",
     "\n",
-    "    # Plot!\n",
+    "    # Plot\n",
     "    fig, (wealth_ax, hist_ax) = plt.subplots(nrows=1, ncols=2, sharey=True, gridspec_kw={'width_ratios':[3,2]}, figsize=(24, 9))\n",
     "    plt.subplots_adjust(wspace=0.0)\n",
     "    \n",
@@ -336,29 +336,6 @@
     ")\n",
     "display(cppi_controls)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# do show ef2 with a wrapper like we just did above to plot the efficient frontier"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
