--- a/python_portfolio_constuction/notebooks/Limits_of_diversification.ipynb
+++ b/python_portfolio_constuction/notebooks/Limits_of_diversification.ipynb
@@ -795,7 +795,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Rolling Correlation - aling with Multiindexes and .groupby"
+    "### Rolling Correlation - aline with Multiindexes and .groupby"
    ]
   },
   {
