--- a/python_portfolio_constuction/notebooks/Max Sharpe Portfolio.ipynb
+++ b/python_portfolio_constuction/notebooks/Max Sharpe Portfolio.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Locating the MSR (Tangancy Portfolio)"
+    "# Locating the MSR (Tangency Portfolio)"
    ]
   },
   {
@@ -22,7 +22,7 @@
     }
    ],
    "source": [
-    " %load_ext autoreload\n",
+    "%load_ext autoreload\n",
     "%autoreload 2\n",
     "%matplotlib inline\n",
     "import risk_ as rv\n",
@@ -50,8 +50,8 @@
     "    \"\"\"\n",
     "    n = er.shape[0]\n",
     "    init_guess = np.repeat(1/n, n)\n",
-    "    bounds = ((0.0, 1.0),) * n # an N-tuple of 2-tuples!\n",
-    "    # construct the constraints\n",
+    "    bounds = ((0.0, 1.0),) * n # N-tuple of 2-tuples\n",
+    "    # Construct the constraints\n",
     "    weights_sum_to_1 = {'type': 'eq',\n",
     "                        'fun': lambda weights: np.sum(weights) - 1\n",
     "    }\n",
@@ -176,7 +176,7 @@
     }
    ],
    "source": [
-    "# plot EF\n",
+    "# Plot EF\n",
     "ax = rv.plot_ef(20, er, cov)\n",
     "ax.set_xlim(left=0)\n",
     "\n",
@@ -185,7 +185,7 @@
     "w_msr = rv.msr(rf, er, cov)\n",
     "r_msr = rv.portfolio_return(w_msr, er)\n",
     "vol_msr = rv.portfolio_vol(w_msr, cov)\n",
-    "# add CML\n",
+    "# Add CML\n",
     "cml_x = [0, vol_msr]\n",
     "cml_y = [rf, r_msr]\n",
     "ax.plot(cml_x, cml_y, color=\"green\", marker=\"o\", linestyle=\"dashed\", linewidth=2, markersize=12)"
@@ -269,22 +269,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# DOESNT WOKR THAT WELL IN PRACTICE"
+    "# DOESN'T WORK THAT WELL IN PRACTICE"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
