--- a/python_portfolio_constuction/notebooks/PV liabilities and FR.ipynb
+++ b/python_portfolio_constuction/notebooks/PV liabilities and FR.ipynb
@@ -50,7 +50,7 @@
     }
    ],
    "source": [
-    "# it takes the return value, to return 1 dollar in the future\n",
+    "# Takes the return value, to return 1 dollar in the future\n",
     "discount(10, 0.03)"
    ]
   },
@@ -278,13 +278,6 @@
    "source": [
     "liabilities"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
