--- a/python_portfolio_constuction/notebooks/Random Walk Monte Carlo.ipynb
+++ b/python_portfolio_constuction/notebooks/Random Walk Monte Carlo.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Random Walk Generation and Monte Carlo"
+    "# Random Walk Generation and Monte Carlo"
    ]
   },
   {
@@ -27,7 +27,7 @@
     "    # Calculates the returns (must convert to prices)\n",
     "    rets = mu*dt + sigma*np.sqrt(dt)*xi\n",
     "    rets = pd.DataFrame(rets)\n",
-    "    # to prices\n",
+    "    # To prices\n",
     "    prices = s_0*(1+rets).cumprod()\n",
     "    return prices"
    ]
@@ -215,7 +215,7 @@
     "    # Calculates the returns (must convert to prices)\n",
     "    rets = mu*dt + sigma*np.sqrt(dt)*xi\n",
     "    rets = pd.DataFrame(rets)\n",
-    "    # to prices\n",
+    "    # To prices\n",
     "    prices = s_0*(1+rets).cumprod()\n",
     "    return prices\n",
     "## Edit the fucntion so instead of producing the matrix xi and then scaling seperatly with sigma*np.sqrt(dt), we can compute both right\n",
@@ -249,13 +249,6 @@
    "source": [
     "%timeit gbm0(n_years=5, n_scenarios=1000)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -562,13 +555,6 @@
    "source": [
     "gbm(n_years=10, n_scenarios=20).head()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
