--- a/python_portfolio_constuction/notebooks/donwside.ipynb
+++ b/python_portfolio_constuction/notebooks/donwside.ipynb
@@ -444,7 +444,7 @@
     "Value at risk\n",
     "\n",
     "- Historical VaR\n",
-    "- Prarmeturc VaR - Gaussian\n",
+    "- Parametric VaR - Gaussian\n",
     "- Modified Cornish-Fischer VaR"
    ]
   },
@@ -742,41 +742,6 @@
    "source": [
     "rv.cvar_historic(hfi).plot.bar()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
