--- a/python_portfolio_constuction/notebooks/Ef Part 2.ipynb
+++ b/python_portfolio_constuction/notebooks/Ef Part 2.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Efficient Frontier II"
+    "# Efficient Frontier II"
    ]
   },
   {
@@ -85,7 +85,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "#weights = np.repeat(1/4, 4)\n",
+    "# Weights = np.repeat(1/4, 4)\n",
     "weights = rv.gmv(cov)\n",
     "m = rv.annualize_vol(er.std(), 12)\n",
     "m\n",
@@ -364,13 +364,6 @@
     "l = [\"Fin\", \"Beer\"]\n",
     "rv.plot_ef2(25, er[l], cov.loc[l, l])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
