--- a/python_portfolio_constuction/notebooks/Global Mean Variance.ipynb
+++ b/python_portfolio_constuction/notebooks/Global Mean Variance.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Global Min Variance Port"
+    "# Global Min Variance Portfolio"
    ]
   },
   {
@@ -211,34 +211,6 @@
    "source": [
     "rv.plot_ef(20, er[l], cov.loc[l,l], show_cml=True, riskfree_rate=0.1, show_ew=True, show_gmv=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
