--- a/python_portfolio_constuction/notebooks/N-Asset Efficient Frontier.ipynb
+++ b/python_portfolio_constuction/notebooks/N-Asset Efficient Frontier.ipynb
@@ -88,8 +88,8 @@
     "    \"\"\"\n",
     "    n = er.shape[0]\n",
     "    init_guess = np.repeat(1/n, n)\n",
-    "    bounds = ((0.0, 1.0),) * n # an N-tuple of 2-tuples!\n",
-    "    # construct the constraints\n",
+    "    bounds = ((0.0, 1.0),) * n # An N-tuple of 2-tuples\n",
+    "    # Construct the constraints\n",
     "    weights_sum_to_1 = {'type': 'eq',\n",
     "                        'fun': lambda weights: np.sum(weights) - 1\n",
     "    }\n",
@@ -199,13 +199,6 @@
     "l = [\"Smoke\", \"Fin\", \"Games\", \"Coal\"]\n",
     "rv.plot_ef(25, er[l], cov.loc[l,l])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
