--- a/python_portfolio_constuction/notebooks/Naive portfolio comparison.ipynb
+++ b/python_portfolio_constuction/notebooks/Naive portfolio comparison.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Naive RIsk Budgeting Strategies between PSP and GHP"
+    "# Naive Risk Budgeting Strategies between PSP and GHP"
    ]
   },
   {
@@ -634,7 +634,7 @@
     }
    ],
    "source": [
-    "# next step is to build better allocators to compare portfolios\n",
+    "# Next step is to build better allocators to compare portfolios\n",
     "rets_g8020 = rk.bt_mix(rets_eq, rets_bonds, allocator=rk.glidepath_allocator, start_glide=.80, end_glide=.20)\n",
     "pd.concat([\n",
     "    rk.terminal_stats(rets_eq, name=\"Equities\"),\n",
@@ -643,20 +643,6 @@
     "    rk.terminal_stats(rets_7030b, name=\"70/30\")\n",
     "], axis=1)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
