--- a/python_portfolio_constuction/notebooks/Returns.ipynb
+++ b/python_portfolio_constuction/notebooks/Returns.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "source": [
+    "# Calculating Returns"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
