--- a/python_portfolio_constuction/notebooks/Coupon-bearing bond MC CIR.ipynb
+++ b/python_portfolio_constuction/notebooks/Coupon-bearing bond MC CIR.ipynb
@@ -103,7 +103,7 @@
     }
    ],
    "source": [
-    "# bond prices at t=1 have started to diverge\n",
+    "# Bond prices at t=1 have started to diverge\n",
     "rk.bond_price(5, 100, .05, 12, rates.iloc[1][[1,2,3]])"
    ]
   },
@@ -695,7 +695,7 @@
    "source": [
     "rets_30 = rk.bond_total_return(price_30, 100, .05, 12)\n",
     "rets_10 = rk.bond_total_return(price_10, 100, .05, 12)\n",
-    "# this assumes a rebalance to 60/40% portfolio weights at the end of each month\n",
+    "# Assumes a rebalance to 60/40% portfolio weights at the end of each month\n",
     "rets_bonds = .6*rets_10 + .4*rets_30"
    ]
   },
